# tfg-fullstack-app

./: .gitignore
backend/: requirements-raspi.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/adapters/http/: deps.py
backend/app/adapters/http/routes/: capture.py  projects.py  system.py
backend/app/application/ports/: runner_port.py
backend/app/application/validators/: project_name.py
backend/app/infrastructure/: projects_fs.py
backend/app/infrastructure/raspi/: runner_raspi.py
backend/app/infrastructure/simulator/: runner_fake.py
backend/estampa-meapis-core/: pyproject.toml
backend/estampa-meapis-core/meapis/: environment.py  meapis.py  project.py
backend/estampa-meapis-core/meapis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/estampa-meapis-core/meapis/camera/: camera.py  camera_config.py  camera_controller.py  owlsight.py  v3.py
backend/estampa-meapis-core/meapis/tasks/: picture_taking.py
backend/estampa-meapis-core/meapis/utils/: file_monitor.py  light.py  log.py  project_runner.py
backend/tools/: lgp-analyze.py
